# etude-django-gae

./: .gitignore  .pre-commit-config.yaml  README.md  devserver.sh  pyproject.toml
.idx/: dev.nix
mysite/mysite/: settings.py
